--- a/web-app/src/assets/scss/main.scss
+++ b/web-app/src/assets/scss/main.scss
@@ -34,6 +34,10 @@ ol {
   height: 20px;
 }
 
+.h-28px{
+  height: 28px;
+}
+
 .h-32px{
   height: 32px;
 }
@@ -65,6 +69,10 @@ ol {
 
 .w-20px{
   width: 20px;
+}
+
+.w-28px{
+  width: 28px;
 }
 
 .w-32px{
